# api/v1/restapi/operations/subscriptions/add_subscription_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package subscribtions
+package subscriptions
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
